fix: fix layout spacing in main pages

--- a/packages/logos-docusaurus-theme/src/client/css/custom.scss
+++ b/packages/logos-docusaurus-theme/src/client/css/custom.scss
@@ -667,17 +667,17 @@ small {
     margin-top: 0 !important;
     margin-bottom: 80px !important;
   }
-
   & > main {
     padding: 0;
 
     &,
     > .row,
     & > .row > .col {
+      --ifm-spacing-horizontal: var(--content-padding);
+
       width: 100% !important;
       flex-basis: 100% !important;
       max-width: unset;
-      padding: 0;
       margin: 0;
       flex: unset;
     }
